--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
     "name": "tenki",
     "version": "1.0.0",
+    "homepage": "http://akarihara1325.github.io/tenki",
+
     "scripts": {
         "start": "webpack serve --mode=development",
-        "build": "webpack --mode=production"
+        "build": "webpack --mode=production",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
     },
     "dependencies": {
         "@types/react": "^17.0.83",
@@ -15,6 +19,7 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-icons": "^5.3.0",
+        "react-router-dom": "^6.27.0",
         "styled-components": "^5.3.11",
         "ts-loader": "^9.5.1",
         "typescript": "^4.9.5",
